# pytest-resource-mon

./: .gitignore  README.md  ci_test_metrics.datasource  mise.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  configuration.md  getting-started.md  github-actions.md  output-formats.md
docs/src/reference/: metrics-schema.md
pytest_resource_mon/: plugin.py
tests/: conftest.py  test_plugin.py
