[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-tinybird-metrics"
version = "0.1.0"
description = "Pytest plugin that snapshots system resources per test and ships metrics to Tinybird"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "psutil>=5.9",
]

[project.entry-points.pytest11]
tinybird_metrics = "pytest_tinybird_metrics.plugin"

[dependency-groups]
dev = [
    "pytest",
    "psutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
